[package]
name = "ng262-evaluator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
num-bigint = "0.4.3"
num-traits = "0.2.14"
swc = "0.97.0"
swc_common = "0.15.0"
swc_ecma_ast = "0.60.0"
swc_ecma_parser = "0.82.1"
swc_estree_ast = "0.5.0"
swc_estree_compat = "0.15.0"
swc_node_comments = "0.2.0"
